changed site layout

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,21 +17,24 @@ p{
 }
 
 h1{
-
+  color: #19d3da;
   font-family: "Krona One", serif;
   font-size: 2.5rem;
-  color: #19d3da;
+
 }
 
 h2{
   color: #19d3da;
   font-size: 1.3rem;
-  font-family: "Commissioner", serif;
+  font-family: "Krona One", serif;
   font-weight: normal;
 }
-
+h3{
+  color: #19d3da;
+}
 .subtitle{
   padding-bottom: 25px;
+
 }
 
 .top {
@@ -75,4 +78,21 @@ position: relative;
 
 a{
   color: #19d3da;
+}
+.skill-row{
+  width: 50%;
+  margin:100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+.coding{
+  width: 25%;
+  float: left;
+  margin-right: 50px;
+}
+.weightlifting{
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+
 }
